# AVDev

./: .gitignore  Makefile  README.md  build_unittest.sh  msys2.defines.mk  systype.sh  tests.mk
avdev/: decoder.cc  decoder.h  media_file.cc  media_file.h  ptr.h  stream_info.cc  stream_info.h  utils.cc  utils.h
avdev/tests/: decoder_test.cc  media_file_test.cc
avdev/unittests/: CMakeLists.txt  media_file_unittest.cc
